---
source: crates/tapir-script/compiler/src/compile/optimisations/unused_function_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/unused_function/used_function.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"FunctionId(1)"}
foo(4,);

# {"FunctionId(1)"}
fn foo(int,) -> (int,) {
    return (
            x # {"SymbolId(0)"}
            ,);
}
